# university

./: README.md
bachelor/Base_de_Dados_sql/: ER OFICIAL.txt  (+4 more)
master/SSD/src/distributed_legder/: Cargo.toml
master/SSD/src/distributed_legder/src/: lib.rs  main.rs
master/SSD/src/distributed_legder/src/auctions/: auction.rs  auction_ui.rs  bid.rs  mod.rs
master/SSD/src/distributed_legder/src/blockchain/: block.rs  blockchain.rs  blockchain_handler.rs  consensus.rs  miner.rs  mod.rs  transaction.rs
master/SSD/src/distributed_legder/src/constants/: blockchain_node_type.rs  fixed_sizes.rs  mod.rs  multicast_info_type.rs  utils.rs
master/SSD/src/distributed_legder/src/dht/: kademlia.rs  mod.rs  routing_table.rs
master/SSD/src/distributed_legder/src/network/: client.rs  datagram.rs  key.rs  mod.rs  node.rs  rpc.rs  rpc_socket.rs  server.rs
master/SSD/src/distributed_legder/state_dumps/: self-node.json  self-node.json.plantuml  self.json  self.json.auction.json  self.json.auction.json.plantuml  self.json.blockchain.json  self.json.blockchain.json.plantuml  self.json.plantuml  test-bootstrap-1.json  test-bootstrap-1.json.plantuml  test-contact-1.json  test-contact-1.json.plantuml  test-contact-2.json  test-contact-2.json.plantuml  test-contact-3.json  test-contact-3.json.plantuml  test-contact-4.json  test-contact-4.json.plantuml  test-miner.json  test-miner.json.blockchain.json  test-miner.json.plantuml  test-network-1.json  test-network-1.json.plantuml  test-network-2.json  test-network-2.json.plantuml  test-network-boot-1.json  test-network-boot-1.json.plantuml
(+5907 files in other folders)
