[package]
name = "distributed_legder"
version = "0.1.0"
edition = "2021"
authors = [] # TODO: add authors

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde-enum-str = "0.3.2"
hex-serde = "0.1.0"
hex = "0.4"
sha2 = "0.10.6"
sha-1 = "0.10.1"
env_logger = "0.10.0"
log = "0.4.17"
chrono = "0.4.24"
ring = "0.16.20"
